# tep

./: .gitignore  Cargo.toml  LICENSE  README.md  bench_alt.sh  new.md  test.md
.github/workflows/: release.yml  rust.yml
assets/: ouput.txt  test.txt  test_mod.txt  test_mod_trimmed.txt
scripts/: gen_rules  gen_rules.rs
src/: cli.rs  cook.rs  lib.rs  main.rs  node.rs  rule.rs  tree.rs
src/common/: cook.rs  mod.rs  node.rs  rule.rs  tree.rs  trim.rs
